# FFL-for-Lithology-identification

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  test.py  train.py
OpenSrc/: infer.py  train.py
OpenSrc/NN/: BayesianProtoNet.py  backbone.py  loss.py
OpenSrc/NN/modules/: Time.py  attention.py  bayesEmbedding.py  feature_extractor.py  fusion_attention.py
OpenSrc/utils/: __init__.py  dataset.py  load_data.py  process_data.py  slice_data copy.py  slice_data.py
